--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -2,18 +2,12 @@
 
 <h2>Single Selection</h2>
 
-{{#mb-menu items=items selected=singleSelected select="selectSingle" as |item|}}
+{{#mb-menu items=items selected=singleSelected on-select="selectSingle" class="menu" as |item|}}
   {{item}}
 {{/mb-menu}}
 
 <h2>Multiple Selection</h2>
 
-{{#mb-menu items=items selected=multiSelected multiple="true" select="selectMulti" deselect="deselectMulti" as |item|}}
-  {{item}}
-{{/mb-menu}}
-
-<h2>Clear Selection</h2>
-
-{{#mb-menu items=items selected=multiSelected multiple="true" select="selectMulti" deselect="deselectMulti" clear="clearMulti" as |item|}}
+{{#mb-menu items=items selected=multiSelected multiple="true" on-select="selectMulti" on-deselect="deselectMulti" class="menu" as |item|}}
   {{item}}
 {{/mb-menu}}
